<resources>
    <string name="app_name">名城好趣处</string>
    <string name="img_common_desc">nerd</string>
    <string name="recommend">推荐</string>
    <string name="nearby">附近</string>
    <string name="seek">发现</string>
    <string name="create_distraction">创建活动</string>
    <string name="create_scenic">创建地点</string>
    <string name="user_center">个人中心</string>
    <string name="edit_distraction_hint">我的想法，写几句吧</string>
    <string name="distraction_type">活动类型</string>
    <string name="destination">目的地:</string>
    <string name="time">时间:</string>
    <string name="publish">发布</string>
    <string name="create">创建</string>
    <string name="distance_meters">%s米</string>
    <string name="my_distraction">我创建的活动</string>
    <string name="join_distraction">我参加的活动</string>
    <string name="msg_list">消息列表</string>
    
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="state_dislogin">未登录</string>
    <string name="state_login">已登录</string>
    <string name="phone_number">电话号码</string>
    <string name="login_password">登录密码</string>   
    <string name="login_password_confirm">确认登录密码</string> 
    <string name="nick_name">昵称</string>
    <string name="privacy_policy">隐私和服务协议</string>  
    <string name="invalidate_input">输入不合法</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败:%d</string>
    <string name="logout_success">退出登录</string>
    <string name="login_tips">请登录！</string>
    <string name="join">申请加入</string>
    <string name="create_chat">发起对话</string>
    
    <string name="send">发送</string>
    <string name="favorite">收藏</string>
    <string name="cancel">取消</string>
    <string name="take_picture">拍照</string>
    <string name="select_from_album">从相册中选择</string>
    <string name="save">保存</string>
    <string name="press_talk">按住说话</string>
    <string name="stop_talk">松开停止</string>
    <string name="flip_up_tip">手指上滑，取消发送</string>
    <string name="release_tip">松开手指，取消发送</string>
    
    <string name="datype_name_hint">类型名称</string>
    <string name="submint">提交</string>
    <string name="charmful_tag">魅力标签</string>
    <string name="input_title_hint">起个响亮的标题吧</string>
    <string name="input_intrest_hint">好好描绘这个有趣的地方吧</string>
    <string name="retrieve_location_error">没有获取到你当前的位置信息</string>
    <string name="gohere">到这里去</string>
    <string name="sharetoweixin">分享到微信</string>
    <string name="like">喜欢</string>
    <string name="follow">关注</string>
    <string name="unfollow">取消关注</string>
    <string name="hot_tag">热门标签</string>
    <string name="hot_topic">热门话题</string>
</resources>