<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/common_color_bg">


    <ImageView
        android:id="@+id/reg_header_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/default_user_header" />

    <EditText
        android:id="@+id/reg_phoneNO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="@color/input"
        android:textColorHint="@color/input_hint" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/input"
        android:textColorHint="@color/input_hint" />
    
     <EditText
        android:id="@+id/reg_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:hint="@string/login_password_confirm"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/input"
        android:textColorHint="@color/input_hint" />
     
      <EditText
        android:id="@+id/reg_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:hint="@string/nick_name"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/input"
        android:textColorHint="@color/input_hint" />

    <Button
        android:id="@+id/reg_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn"
        android:text="@string/register"
        android:textColor="@color/input" />


    <TextView
        android:id="@+id/register_agree_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
		android:layout_marginTop="50dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/input"
        android:textSize="12sp" />

</LinearLayout>