<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="2dp"
	    android:paddingRight="2dp"
	    android:background="@drawable/common_color_bg"
	    android:orientation="vertical" >
	
	   <com.android.volley.toolbox.NetworkImageView  
	        android:id = "@+id/main_image"
	        android:layout_width="match_parent"
		    android:layout_height="140dp"
		    android:contentDescription="@string/img_common_desc"
	        android:scaleType="fitXY"
		    android:src="@drawable/default_scenic_img"/>
		    
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:background="@color/white">
		        
	       <TextView
			    android:id="@+id/title"
			    android:singleLine="true"
			    android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_alignParentLeft="true"
			    android:textSize="@dimen/fontSize_C" />
	
	        <TextView
	            android:id="@+id/distance"
	            android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@id/title"
	            android:drawableLeft="@drawable/ic_distance"
	            android:textSize="@dimen/fontSize_A" />
	        
	        <TextView
	            android:id="@+id/view_num"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/title"
	            android:layout_toLeftOf="@+id/location"
	            android:drawableLeft="@drawable/look_icon"
	            android:paddingLeft="20dp"
	            android:textSize="@dimen/fontSize_A" />
		    
	        <TextView
	            android:id="@id/location"
	            android:layout_width="80dp"
	            android:layout_height="match_parent"
	            android:layout_alignParentRight="true"
	            android:drawableTop="@drawable/ic_distance"
	            android:background="@drawable/common_color_bg"
	            android:gravity="center_horizontal"
	            android:text="@string/gohere"
	            android:textSize="@dimen/fontSize_B" />
	
		</RelativeLayout>
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="20dp"
	        android:gravity="center_vertical"
	        android:orientation="horizontal" >
	      	<TextView 
		       android:layout_width="wrap_content"
		       android:layout_height="match_parent"
		       android:text="@string/charmful_tag"
		       android:gravity="bottom"
		       android:textSize="@dimen/fontSize_A" />
	      	
	      <LinearLayout
		    android:id="@+id/tag_container"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:orientation="horizontal" />
		    
	   </LinearLayout>
	        
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="10dp"
	        android:background="@color/white"
	        android:orientation="horizontal" >
	        
		    <Button
		        android:id="@+id/create_distraction"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:background="@drawable/selector_btn"
		        style="?android:attr/buttonBarButtonStyle"
		        android:text="@string/create_distraction"
		        android:textColor="@color/input" />	  
		          
		    <Button
		        android:id="@+id/share"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="@drawable/selector_btn"
		        style="?android:attr/buttonBarButtonStyle"
		        android:text="@string/sharetoweixin"
		        android:textColor="@color/input" />
		    
		   <Button
		        android:id="@+id/like"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="@drawable/selector_btn"
		        style="?android:attr/buttonBarButtonStyle"
		        android:text="@string/like"
		        android:textColor="@color/input" />
		</LinearLayout>
		
	    <TextView
		    android:id="@+id/description"
		    android:layout_marginTop="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="@dimen/fontSize_B" />
	    
	    <LinearLayout
	        android:id="@+id/img_container"
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:orientation="vertical" />
	</LinearLayout>
</ScrollView>