<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/common_color_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop = "20dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_unlogin" />

        <TextView
            android:id="@+id/nick_name"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/state_dislogin"
            android:textSize="14sp"
            android:drawableRight="@drawable/selector_arrow_right" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/my_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_distraction"
            android:textSize="16sp"
            android:drawableRight="@drawable/selector_arrow_right"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/my_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_distraction"
            android:textSize="16sp" 
            android:drawableRight="@drawable/selector_arrow_right"/>
    </LinearLayout>

</LinearLayout>