<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:layout_marginTop="5dp"
	    android:orientation="horizontal" >
	    
	    <com.android.volley.toolbox.NetworkImageView 
	        android:id = "@+id/image"
	        android:layout_width="140dp"
		    android:layout_height="match_parent"
		    android:scaleType="fitXY"
		    android:src="@drawable/default_da_img"/>
	    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
		    <TextView
			    android:id="@+id/title"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:textStyle="bold"
			    android:textSize="@dimen/fontSize_A" />
		    
		    <LinearLayout
		        android:id="@+id/dest_container"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:background="@color/white"
		        android:gravity="center_vertical"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:text="@string/destination"
		            android:textSize="@dimen/fontSize_A" />
		
		        <TextView
		            android:id="@+id/dest"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:gravity="center_vertical"
		            android:paddingLeft="20dp"
		            android:textSize="@dimen/fontSize_A" />
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/white"
		        android:gravity="center_vertical"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:text="@string/time"
		            android:textSize="@dimen/fontSize_A" />
		
		        <TextView
		            android:id="@+id/starttime"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:paddingLeft="20dp"
		            android:textSize="@dimen/fontSize_A" />
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_marginTop="2dp"
		        android:layout_height="20dp"
		        android:background="@color/white"
		        android:layout_gravity="center_vertical"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:id="@+id/partner_count"
		            android:layout_width="0dp"
		            android:layout_height="match_parent"
		            android:drawableLeft="@drawable/ic_partner"
		            android:layout_weight="1"
		            android:textSize="@dimen/fontSize_A" />
		
		        <TextView
		            android:id="@+id/distance"
		            android:layout_width="0dp"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:drawableLeft="@drawable/ic_distance"
		            android:paddingLeft="20dp"
		            android:textSize="@dimen/fontSize_A" />
		    </LinearLayout>
		    
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="right"
        android:orientation="horizontal" >
	    
	   <Button
	        android:id="@+id/join"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/selector_btn"
	        style="?android:attr/buttonBarButtonStyle" 
	        android:text="@string/join"
	        android:textColor="@color/input" />
	    	    
	    <Button
	        android:id="@+id/create_chat"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_marginLeft="10dp"
	        android:background="@drawable/selector_btn"
	        style="?android:attr/buttonBarButtonStyle" 
	        android:text="@string/create_chat"
	        android:textColor="@color/input" />
	</LinearLayout>
	
    <TextView
	    android:id="@+id/description"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/fontSize_A" />
    
</LinearLayout>